# NL2SQL

./: .env  .gitignore  README.md  TECHNICAL_SURVEY.md  create_test_db.py  evaluate_performance.py  main.py  pyproject.toml  sample.db  temp.txt  test_fastapi.py
.engine/lib/: core.py
api/: main.py
nlp/: entity_extractor.py  intelligence.py  parser.py
query_builder/: intent_classifier.py  sql_generator.py
schema/: employees_metadata.json  inspector.py  metadata copy.json  metadata.json
